feat: resolve Py3.14 path issues and verify logical plan for 1500+ cols